# c_beachhead

./: .gitignore  CMakeLists.txt  README.md  setup.py
.templates/: CMakeLists.txt.j2  README.md.j2  c_cpp_properties.json.j2  c_file.c.j2  c_file_test.c.j2  common.h.j2  h_file.h.j2  h_file_test.h.j2  launch.json.j2  main.c.j2  main_test.c.j2  tasks.json.j2
cli/: cli.py
images/: c_layout.uxf
inc/: hey.h
src/: hey  hey.c
